--- a/activities.tex
+++ b/activities.tex
@@ -23,23 +23,22 @@ Beginning of the development of course notes for \statcl.
 \subsection{Undergraduate involvement}
 \label{sec:ugradseminar}
 
-The PI and all co-PI's have extensive track records of involving
-undergrads in research. Undergraduates who take either of the courses will be involved in
-research projects either (1) along with the funded graduate students,
-supervised by the PI, co-PI's and the graduate students or (2) in the
-UW units that provide data sets.
+%The PI and all co-PI's have extensive track records of involving
+%undergrads in research. Undergraduates who take either of the courses will be involved in
+%research projects either (1) along with the funded graduate students,
+%supervised by the PI, co-PI's and the graduate students or (2) in the
+%UW units that provide data sets.
 
 All undergraduates involved in research under this project, along with
-the graduate students, will participate in an {\em Undergraduate
-\cdse\  Research Seminar} where they will present and
-discuss their work.  
-The seminar will be open to any other undergraduate students involved
-in research with Statistics faculty who would like to participate, as
-well as any other undergraduates across campus interested in \cdse~
-research. The seminar's goal is to be a forum where research
-experiences are shared, research teams are formed, new research
-projects are started, and familiarity with the strategic and social
-aspects of research is gained. 
+their supervising graduate students, will participate in an {\em
+  Undergraduate \cdse\ Research Seminar} where they will present and
+discuss their work.  The seminar will be open to any other
+undergraduate students involved in research with Statistics faculty
+who would like to participate, as well as any other undergraduates
+across campus interested in \cdse~ research. The seminar's goal is to
+be a forum where research experiences are shared, research teams are
+formed, new research projects are started, and familiarity with the
+strategic and social aspects of research is gained.
 
 In addition to technical presentations and discussions by undergraduate
 students, the seminar will include:
