--- a/dissemination.tex
+++ b/dissemination.tex
@@ -16,15 +16,16 @@ in lectures and research seminars, and all the data analysis code.
 \subsection{Workshops} 
 \label{sec:workshop}
 
-In order to facilitate easy adoption of our program by others, we 
-plan to hold two workshops. The first workshop, which will also 
-serve as a dry run for the second larger workshop, will be limited to
-faculty from the University of Washington, and it will be held during
-the second program year. We anticipate about 10 faculty from various 
-science and engineering departments attending this workshop. Given 
-the local attendees, we plan to organize two half-day sessions focused 
-on i) program outline and materials, and ii) measured program progress 
-and ideas for improvements. 
+In order to facilitate easy adoption of our program by others, we will
+hold two workshops. The first workshop, which will also serve as a dry
+run for the second larger workshop, will be limited to faculty from
+the University of Washington, and it will be held during the second
+year of the program. We anticipate about 10 faculty from Mathematics,
+and various
+science and engineering departments attending this workshop. Given the
+local attendees, we plan to organize two half-day sessions focused on
+i) program outline and materials, and ii) measured program progress
+and ideas for enhancements.
 
 The second workshop will be longer and open to everyone. We plan a 
 three-day workshop and anticipate about 30 faculty from other
