--- a/education.tex
+++ b/education.tex
@@ -46,88 +46,104 @@ courses, the following:
     \item {\sc STAT 498} Special topics
 \eits
 The program web page recommends that ``[this track] is ideally suited as a {\em second major} for students with a primary focus in the [\ldots] sciences''.
-De facto, the track curriculum differs little, most notably by the
+The track curriculum differs little, most notably by the
 presence of the computer programming class {\sc CSE 142}, from the
 ``standard'' Statistics major.
 
 {\bf Enrollment} The ACMS major is competitive, with the number of
 majors capped at about 200.  During the recent academic years,
 graduation numbers have passed 100 students per year; the current
-enrollment is at 147\footnote{Complete breakdown of ACMS graduation
-  numbers from 1998 on are in the Supplementary material.}.  Of these,
-the Statistics track accounts for 4 students currently enrolled (none
-as double majors), and for 2 to 6 students graduated in each of the
-last 5 years. In the same time, enrollment in the Statistics major is
-at an all times high, with 127 currently enrolled students (74 double
-majors, 53 single majors) of which 77 women.
+enrollment is at 147\footnote{A complete breakdown of ACMS graduation
+  numbers from 1998 on are available in the Supplementary material.}.
+Of these, the Statistics track accounts for {\it only} 4 students
+currently enrolled (none as double majors), and for 2 to 6 students
+graduated in each of the last 5 years. In the same time, enrollment in
+the Statistics major is at an all times high, with 127 currently
+enrolled students (74 double majors, 53 single majors) of which 77
+women.
 
 \subsection{Transforming the Statistics  ACMS track}
-We will transform the ACMS Statistics track into a virtually new
-major, a ``computationally minded Statistics major focused on Big Data''. 
-In other words, we will not aim to produce scientists who also know statistics (which
-can be well served by Statistics minor and other tracks of ACMS) but
-full-fledged statisticians who can function autonomously in the modern
-cyberworld.
+We propose to use the ACMS Statistics track as a vehicle to create a
+data-intensive or Big Data track in statistics. This transformative
+program will focus on teaching new ways for computational and
+statistical thinking. It will incorporate research within the teaching
+components and apply best practices when developing a diverse and
+representative student cohort.  In other words, we will aim not to
+produce scientists who also know statistics (which can be well served
+by Statistics minor and other tracks of ACMS) but full-fledged
+statisticians who can function autonomously in the modern workforce.
 
 There are several motivating factors:
 \bit
+\item The role of
+ the statistician as data analyst and scientist has become both more central, and
+ more demanding. As more data analysis and more decisions based on it
+ are being shifted from humans to computers, statistics is called
+ upon to design and validate the procedures used to take these
+ decisions. Thus, the statician's importance in a much wider range of
+ human activities, be they science or business. But the
+ statistician's responsibility is commensurately growing, as (s)he needs
+ to master the skills required by cyber-enabled science and data
+ analysis.
 \item Interest in statistics is at an all times high, as witnessed by
   our enrollment numbers. We expect that the ACMS Statistics track
   will reach similar enrollment numbers. Note that at the current
   enrollment in the other tracks, the total ACMS enrollment will be
   near the 200 level.
-
-\item The role of
-  the statistician as data analyst has become both more central, and
-  more demanding. As more data analysis and more decisions based on it
-  are being shifted from humans to computers, statistics is called
-  upon to design and validate the procedures used to take these
-  decisions. Thus, the statician's importance in a much wider range of
-  human activities, be they science or business. But the
-  statistician's responsibility is commensurately growing, as (s)he needs
-  to master the skills required by cyber-enabled science and data
-  analysis.
-\item These skills are not limited to using computers and
-  programming. The nature of statistical analyses itself is
-  affected \cite{friedman:97} as it has been long
-  recognized. Computationally heavy statistical methods need to be
-  designed. Very large samples will support models of a complexity
+\item There is a disconnect between the classical statistics
+  curriculum and the computational needs of the next generation of Big
+  Data statisticians. 
+\item The nature of statistical analyses is itself affected by the
+  rapid increase in data volumes \cite{friedman:97}; as has 
+  long been recognized. Computationally heavy statistical methods need to
+  be designed. Very large samples will support models of a complexity
   that could not be considered in real-life scenarios a decade or two
-  ago. It is now not possible to perform model selection by explicitly
-  comparing all possible models (i.e. there can be an exponential
+  ago. It is no longer possible to perform model selection by explicitly
+  comparing all possible models (i.e.\ there can be an exponential
   number of models to compare) and regularization methods are often
   called into play, as are approximate computational
   techniques. Leveraging unlabeled data for prediction is now an
   almost universal necessity. Devising new methods to evaluate complex
   models in an environment that is not stationary, nor controlled are
   some of the challenges of modern data analysis.
-\item The proposal fits in and leverages other \cdse\ efforts and successes at UW in creating a strong collaborative environment (the eScience Institute, the IGERT for graduate education in Big Data, and the related PhD tracks recently created in CSE and Statistics). The time is ripe to involve undergraduates, and specifically statistics and mathematics majors in this change.
-\item This proposal is in the spirit of the ACMS original mission,
-  bringing this program up to speed with the demands of the coming decade.
+\item The proposal fits in and leverages other \cdse\ efforts and successes at UW for creating a strong collaborative environment (the eScience Institute, the IGERT for graduate education in Big Data, and the related PhD tracks recently created in CSE and Statistics). The time is ripe to involve undergraduates, and specifically statistics and mathematics majors in this change.
+%\item This proposal is in the spirit of the ACMS original mission,
+%  bringing this program up to speed with the demands of the coming decade.
 \eit
 
-\vskip 0.1in
-{\bf Work Plan}
+%\vskip 0.1in
+\subsection{Work Plan}
 
 For planning purposes, we divide the proposed project into three stages which
 roughly map to yearly schedule. 
 
-{\bf Stage 1:} Design and introduce two new courses \statcl, \astrocl,
+\noindent {\bf Stage 1:} Design and introduce two new courses \statcl, \astrocl,
 as {\em electives} in the track.  Start the Undergraduate \cdse~
 Research Seminar. This seminar will differ from the existing ``ACMS''
 Undergraduate Math Science Seminar ({\sc Math 498}), in that the
 speakers will be undergraduates themselves or their mentors, and the
-seminar topics will be their projects (see Section
+seminar topics will be their research projects (see Section
 \ref{sec:research} for more details).
 
-{\bf Stage 2:} Redesign the track: move \statcl, Stochastic Processes {\sc STAT 481, 482} into the core. As the track will no longer be regarded as a second major for science students, we will make room by removing the {\sc PHYS 121-2-3} courses (15 credits) from it.  Reorganizing the electives into two groups: math/stat electives (group I) and computing and science electives (group II). Further reorganization of the core and electives in consultation with Statistics faculty and the other ACMS participating departments and Schools. For example, we will consider adding one or both of {\sc AMATH 482, 483} ``Data analysis'', ``High performance scientific computing''.
+\noindent {\bf Stage 2:} Redesign the track to address the needs of Big Data
+based on the evaluation of the first year of activities: move \statcl,
+Stochastic Processes {\sc STAT 481, 482} into the core. As the track
+will no longer be regarded as a second major for science students, we
+will make room by removing the {\sc PHYS 121-2-3} courses (15 credits)
+from it.  Reorganizing the electives into two complementary groups:
+math/stat electives (group I) and computing and science electives
+(group II) will enable targeting of the interests of a diverse student
+body.  Further reorganization of the core and electives could include
+adding one or both of {\sc AMATH 482, 483} ``Data analysis'', and
+``High performance scientific computing''.
+%consultation with Statistics faculty and the other ACMS participating
+%departments and Schools. 
+Organization of a workshop for UW faculty to share our experiences and
+teaching infrastructure and to broaden the science components of this program.
 
-Organization of a workshop for UW faculty to share our experiences and teaching infrastructure.
-
-{\bf Stage 3:} Incorporate feedback from evaluators and all participants. Continue developing the courses' software and data infrastructure. 
-
-In addition to this plan, although we are at the moment not explicitly
-proposing this, we will investigate if the two new courses could be
+\noindent {\bf Stage 3:} 
+%Incorporate feedback from evaluators and all participants. Continue developing the courses' %software and data infrastructure. 
+Investigate if the two new courses could be
 made accessible to Mathematics majors as well. Mathematics Professor
 William Stein, creator and leader of the {\tt Sage}
 project\footnote{{\tt www.sagemath.org/}}, teaches a successful Python
@@ -138,7 +154,7 @@ satisfy the Statistics prerequisites is also found.
 
 {\bf Why this particular approach?} Currently, computer education is
 assured primarily through two core courses, {\sc Cse 142, 143}
-\cite{cse142,Reges:java}. These set the foundations in the understanding of
+\cite{Reges:java}. These set the foundations in the understanding of
 computer programming, but they are of a general nature, and are mainly
 focused towards preparing future programmers  (these courses are the
 same courses that the approximately 500 CSE majors take). Thus, there
@@ -160,19 +176,19 @@ using the language, to an audience of around 40 CSE undergraduates
 feedback was very encouraging, and one of the reasons we are confident
 in our approach.
 
-The need for a dedicated scientific computing course was long
-recognized, hence the Scientific Computing track and courses developed
-by {Amath \sc 481} (project based, in Matlab) {\sc 482}, and {\sc 483}. 
-Our proposed courses are not replicating, but adding a new dimension to
-the existing AMATH courses. The latter focus on the ``signal
-processing'' aspects of data analysis (e.g filtering, {\sc Amath
-  482}) and on the ``hardware, software, and programming for
-large-scale scientific computing'' ({\sc Amath 483}), while our
-courses focus on the statistical modeling and statistical decision
-making aspects.
+%The need for a dedicated scientific computing course was long
+%recognized, hence the Scientific Computing track and courses developed
+%by {Amath \sc 481} (project based, in Matlab) {\sc 482}, and {\sc 483}. 
+%Our proposed courses are not replicating, but adding a new dimension to
+%the existing AMATH courses. The latter focus on the ``signal
+%processing'' aspects of data analysis (e.g filtering, {\sc Amath
+ % 482}) and on the ``hardware, software, and programming for
+%large-scale scientific computing'' ({\sc Amath 483}), while our
+%courses focus on the statistical modeling and statistical decision
+%making aspects.
 
 Third, we chose to separate the education/teaching component and the
-research component into courses and research seminar, respectively. We
+research component into courses and a research seminar, respectively. We
 consider this the better option, since the courses will have to teach
 both programming and methodology. Pursuing too many goals in the
 course of a single class would have been detrimental to solid learning.
@@ -207,36 +223,37 @@ How does UW support this plan:
 ``Computational Statistical Modeling and Machine Learning'' (4 credits)
 \item \astrocl ``Data Intensive Astronomy'' (3 credits)
 \eits
-These courses' aims are explicitly to (1) to give students a hands-on experience, through programming, and performing real data analyses on a computer, with the computational aspects of 
-statistical modeling in general, and (2) to introduce them to the  machine learning methodology in particular, with specific attention to the issues of big data.
+These courses' aims are explicitly to (1) provide a strong statistical
+foundation in data analysis (2) give students a hands-on experience, through programming, and performing real data analyses on a computer, with the computational aspects of 
+statistical modeling in general, and (3)  introduce them to the  machine learning methodology in particular, with specific attention to the issues of big data.
 
 The material covered will be partly overlapping with other courses
 (e.g. regression, probability models for discrete data) and partly new
 (e.g. classification, clustering). However, the treatment of the
-material will stress on the interaction of computational and
+material will stress the interaction of computational and
 statistical aspects in modeling and prediction with scientific and
-engineering data. In this sense, the overlap has not been avoided on purpose
+engineering data. In this sense, the overlap is deliberate
 so that the students can gain a new, computational, perspective on areas
 already studied from a more theoretical point of view. 
 
 {\bf Prerequisites} (for either course): an introductory programming
 course (not necessarily in Python), e.g. CSE 142 or equivalent
 programming experience; an introductory statistics course; mathematics
-multivariate calculus. The two courses can be taken in a sequence
-\statcl--\astrocl, or separately. These course can be accessible to
-other juniors and seniors with a strong quantitative background.
+multivariate calculus. 
+%The two courses can be taken in a sequence
+%\statcl--\astrocl, or separately. These course can be accessible to
+%other juniors and seniors with a strong quantitative background.
 
 
-{\bf Format and student experience} 
-The courses will consist of lectures, homework assignments, 1--2
-miniprojects, and a final exam. The TA will hold quiz sections; about
-half of these will be in a (virtual) computer lab environment. 
+%{\bf Format and student experience} 
+%The courses will consist of lectures, homework assignments, 1--2
+%miniprojects, and a final exam. The TA will hold quiz sections; about
+%half of these will be in a (virtual) computer lab environment. 
 
 {\bf The Computer Lab recitations} will offer support for learning
 Python, as well as specific data analysis tools (see Section \ref{sec:Python}).
 The students will practice programming in pairs (a.k.a extreme
 programming), using debuggers, profilers, writing modifiable code, etc.
-
 Another experience in the computer lab will be actual data analysis
 and visualization using the tools, the skills related to data
 visualisation, experimental data recording and reporting, etc.
@@ -247,14 +264,14 @@ programming assignments, and data analysis assignments.
 
 A note on the overlap between \statcl~ and \astrocl: Where the two
 courses have overlapping topics, \astrocl~ will consider the big data case
-explicitly, while \statcl~ will be considering the connections between
+explicitly, while \statcl~ will consider the connections between
 statistical theory and computation. \statcl~ will support more basic
 Python, while \astrocl~ will support Python libraries for big data.
 
 
 \vskip 0.2in
 \bit
-\item  \underline{\statcl~ {\bf Draft Syllabus}}\\
+\item  \underline{\statcl~ {\bf Draft Syllabus}}  XXX NEEDS TITLE \\
 \bit
 \item a review of the concept of likelihood and Max Likelihood estimation (cases in which MLE has no closed form, gradient ascent/Newton estimation of MLE)
 \item a review of basic probability models with focus on ML estimation of these models, supported heavily by simulation (e.g demonstrating gaussianity of MLE for certain models, and non-gaussianity for other models, including Zipf's law type distributions)
@@ -319,7 +336,7 @@ extensive prior knowledge in statistics will be required.
 
 
 \vskip 0.2in
-\item \underline{\astrocl~ {\bf Draft Syllabus}}\\
+\item \underline{\astrocl~ {\bf Draft Syllabus}} XXX NEEDS TITLE \\
 \bit
 \item computational challenges in data-intensive astronomy and astrophysics 
 (data types and data management systems, types of computational problems and 
@@ -354,34 +371,45 @@ this proposal.
 \label{sec:Python}
 
 
-We will leverage all the publicly available modern Python tools. In particular, seminar work will be 
-built around the {\it astroML} package (available from http://www.astroml.org) that was developed 
-by Co-PIs to support the textbook to be used with the proposed \astrocl course. {\it astroML} is a Python module 
-for machine learning and data mining built on {\it numpy}, {\it scipy}, {\it scikit-learn}, and {\it matplotlib}, 
-and distributed under the 3-clause BSD license. It contains a growing library of statistical and machine 
-learning routines for analyzing astronomical data in Python, loaders for several open astronomical datasets, 
-and a large suite of examples of analyzing and visualizing astronomical datasets (there are close to two 
-hundred examples of machine learning and visualization in the code library that supports the textbook 
-alone). In addition to  {\it astroML} package, we will expose students to several other popular and widely
-used toolkits (e.g. PyMC for Markov chain Monte Carlo methods, and HealPy for spherical coordinates 
-and spherical harmonic transformations). 
+We will leverage all the publicly available modern Python tools. In
+particular, seminar work will be built around the {\it astroML}
+package (available from http://www.astroml.org) that was developed by
+Co-PIs to support the textbook used in the proposed \astrocl\
+course. {\it astroML} is a Python module for machine learning and data
+mining built on {\it numpy}, {\it scipy}, {\it scikit-learn}, and {\it
+  matplotlib}, and distributed under the 3-clause BSD license. It
+contains a growing library of statistical and machine learning
+routines for analyzing astronomical data in Python, loaders for
+several open astronomical datasets, and a large suite of examples of
+analyzing and visualizing astronomical datasets (there are close to
+two hundred examples of machine learning and visualization in the code
+library that supports the textbook alone). In addition to the {\it
+  astroML} package, we will expose students to several other popular
+and widely used toolkits (e.g. PyMC for Markov Chain Monte Carlo
+methods, and HealPy for spherical coordinates and spherical harmonic
+transformations).
 
-As an example of methods and exercises available in  {\it astroML}, we single out methods 
-for reducing data dimensionality. Many astronomical analyses must address the question of the 
-complexity as well as size of the data set. Dimensionality reduction methods address the
-complexity issue  by finding the directions within a multivariate data set that contain most 
-of the information. Classical approaches for identifying the principal dimensions include
-principal component analysis (PCA), independent component analysis (ICA), and non-negative 
-matrix factorization (NMF). These methods are implemented in   {\it astroML}, with a user-friendly 
-interface and adequate documentation (see Figure~\ref{Fig:astroML}). Furthermore, {\it astroML} also 
-includes easy-to-use code to automatically access and download spectra collected by the Sloan Digital 
-Sky Survey (currently a ``gold standard'' for modern astronomical surveys and big data sets; see sdss.org). 
-Therefore, an undergraduate student will not only be exposed to modern statistical methods
-and a cutting-edge astronomical data set, but will be empowered to actually apply these methods 
-to a real complex and massive data set.  The result of this exercise is shown in Figure~\ref{Fig:astroML2}. 
-With such a positive experience, it is very likely that students would not have difficulties applying 
-the same methods and tools later to scientifically unrelated but mathematically similar problems.  
-
+As an example of methods and exercises available in {\it astroML}, we
+single out methods for reducing data dimensionality. Many astronomical
+analyses must address the question of the complexity as well as size
+of the data set. Dimensionality reduction methods address the
+complexity issue by finding the directions within a multivariate data
+set that contain most of the information. Classical approaches for
+identifying the principal dimensions include principal component
+analysis (PCA), independent component analysis (ICA), and non-negative
+matrix factorization (NMF). These methods are implemented in {\it
+  astroML}, with a user-friendly interface and adequate documentation
+(see Figure~\ref{Fig:astroML}). Furthermore, {\it astroML} 
+includes easy-to-use code to automatically access and download spectra
+collected by the Sloan Digital Sky Survey (currently the ``gold
+standard'' for modern astronomical surveys and big data sets; see
+sdss.org).  Therefore, an undergraduate student will not only be
+exposed to modern statistical methods and a cutting-edge astronomical
+data set, but will be empowered to actually apply these methods to a
+real complex and massive data set.  The result of this exercise is
+shown in Figure~\ref{Fig:astroML2}.  With such a positive experience,
+it is likely that students would be able to incorporate the methods
+and tools taught in this class into other data-intensive domain sciences.
 
 \begin{figure*}[!t]
 \vskip -1.9in
@@ -415,11 +443,17 @@ such spectra.}
 \subsection{What we are building on?}
 \label{sec:precursors}
 
-\meila~ has extensive previous experience teaching computational
-statistics courses at all levels. She developed the
+All Co-I's have extensive experience in teaching data intensive
+statistics and in incorporating these methodologies into undergraduate
+research. \meila~ has extensive previous experience teaching
+computational statistics courses at all levels. She developed the
 course ``Probability and Statistics for Computer Science'' an
-introductory course aimed at computer science majors, complete with exercises and demos in Matlab, revised the Statistical Computing graduate course sequence, later developed the Statistical Learning graduate sequence and led, with prof. Emily Fox, 
-the effort to introduce the Machine Learning/Big Data PhD track in the Statistics department. 
+introductory course aimed at computer science majors, complete with
+exercises and demos in Matlab, revised the Statistical Computing
+graduate course sequence, later developed the Statistical Learning
+graduate sequence and led, with Prof. Emily Fox, the effort to
+introduce the Machine Learning/Big Data PhD track in the Statistics
+department.
 
 \comment{
  under the same
@@ -430,30 +464,33 @@ experience with data, through programs one understands, the
 combination of algorithmics and statistics that comes into play for
 large, high-dimensional data sets \mmp{clean this up}}
 
-Connolly teaches a graduate class ASTR 597 ``Statistics and Machine Learning'' at the 
-Department of Astronomy. Ivezi\'{c} teaches a graduate class ASTR 507 ``Aastrophysics I'',
-which includes introduction to statistical data analysis and Bayesian statistics. 
-VanderPlas teaches a graduate seminar course Astr 599 ``Scientific Computing with Python''. 
-Materials and experienced developed in these courses will be leveraged in the development
-of this program (see Sections \ref{sec:Python} and \ref{sec:Jake}). 
+Connolly teaches a graduate class ASTR 597 ``Statistics and Machine
+Learning'' at the Department of Astronomy. Ivezi\'{c} teaches a
+graduate class ASTR 507 ``Astrophysics I'', which includes
+introduction to statistical data analysis and Bayesian statistics.
+VanderPlas teaches a graduate seminar course Astr 599 ``Scientific
+Computing with Python''.  Materials and experienced developed in these
+courses will be leveraged in the development of this program (see
+Sections \ref{sec:Python} and \ref{sec:Jake}).  \meila\ and Connolly
+co-taught an extremely well received course at CMU in 1999-2000,
+``Computational Statistics of Multi-Dimensional Scientific
+Databases'', which united students from Statistics, Computer Science
+and Astronomy, as well as faculty from these departments.
 
-\meila\ and Connolly co-taught an extremely well received course at CMU
-in 1999-2000, ``Computational Statistics of Multi-Dimensional
-Scientific Databases'', which united students from Statistics,
-Computer Science and Astronomy, as well as faculty from these
-departments.
-
-The Statistics department runs a {\em Virtual computer lab} that will
-be used by \statcl~ students in their quiz sessions and assignments.
+%The Statistics department runs a {\em Virtual computer lab} that will
+%be used by \statcl~ students in their quiz sessions and assignments.
 %The clusters {\tt newton1,2}, consisting of 8, respectively 2 high memory nodes, 
-The high-memory computer clusters, 
-accquired from a UW Student Technology Grant, will serve as
-basis for the graduate student research. The Pre-MAP program (see Section \ref{sec:MNRetaining})
-run by the Department of Astronomy will be used for recruitment. 
+%The high-memory computer clusters, 
+%acquired from a UW Student Technology Grant, will serve as
+%basis for the graduate student research. The Pre-MAP program (see Section \ref{sec:MNRetaining})
+%run by the Department of Astronomy will be used for recruitment. 
 % \mmp{shall i buy more nodes??}
 
 The \astroml~ textbook and the supporting public web site will provide the starting 
-point for the new courses' software and data infrastructure (see Section \ref{sec:Python}).
+point for the new courses' software and data infrastructure (see
+Section \ref{sec:Python}). All compute resources will be provide
+either by the Statistics department or, for cloud computing, through
+the eScience Institute as part of their Data Science Initiative.
 
 \comment{
 (Recently, starting 2011, CSE created their own introduction to
