--- a/organization.tex
+++ b/organization.tex
@@ -1,5 +1,4 @@
-
-\section{    {\bf        PROJECT ORGANIZATION AND MANAGEMENT         }}
+\section{PROJECT ORGANIZATION AND MANAGEMENT}
 \label{plan}
 
 \subsection{                      Key Project Aims                   }
@@ -22,11 +21,40 @@ increased enrollment in newly developed major, inclusion of developed activities
 
 \subsection{Responsibilities and Schedule}
 
+\vskip 0.1in Our main goals and deliverables are: 
+\bits
+\item {\bf Education and Training} (Section \ref{sec:education}).
+
+  To transform the ACMS Program Statistics track to address the
+  challenges of data intensive statistics including:
+\begin{itemize}
+  \item two new courses
+  \item a  new data intensive research and education curriculum 
+  \item an undergraduate \cdse~ Research Seminar
+  \end{itemize}
+\item {\bf Research and mentoring for research} (Section \ref{sec:research})
+To facilitate the entrance of Statistics students into computationally
+intensive data analysis research by:
+\begin{itemize}
+  \item the mentoring of undergraduate students by PI, Co-PIs, and graduate students
+  \item the mentoring of Statistics and Astronomy graduate students by PI and Co-PIs
+  \end{itemize}
+\item {\bf Dissemination and Outreach} (Section \ref{sec:outreach})
+ The creation of software and exemplar datasets for teaching
+ computational statistics and machine learning including developing
+ material for:
+ \bits
+  \item a workshop for UW faculty % in the use of the infrastructure and our experience with it
+  \item workshop with outside participation. 
+ \eits
+\eits  
+
 The PI, Meila, will be responsible for the overall success of the project. She will also be 
 responsible for the course STAT 391, and for mentoring Statistics students. The Co-PIs 
 Connolly and Ivezi\'{c} will be responsible for the course ASTR 497, and for mentoring 
 Astronomy students. The Co-PI VanderPlas will be responsible for Python materials, 
 and for maintaining and developing tools available through the {\it astroML} package. 
+
 
 The work will adhere to this schedule: 
 \bits
@@ -71,15 +99,16 @@ Statistics/EE graduate course, a NIPS Workshop (co-organized by
 5 statistics students, 1 CS student, 1 Applied Math student and 1
 undergraduate. The grant ``Doctoral Student Forum and Student Travel
 at the 2011 SIAM Data Mining Conference'' (DMS-1103263) supported the
-travel of 14 out of town students to participate in the Doctoral Forum
+travel of 14 out-of-town students to participate in the Doctoral Forum
 (9 out of these being statistics students), and an additional 7
-students in the conference. The Forum activities: panel discussion,
-poster session, and best poster award were a succes. (In particular,
-several students obtained internships, organized SDM workshops in
-2013, and improved their papers as a result of the Forum). \meila~ is
-a recipient of the grant ``Statistical Modeling the Functional
-Activity in the Primary Motor Cortex'' from the {\em NSF ERC for
-  Sensorymotor and Neural Engineering}, is a two year ongoing
+students in the conference. 
+%The Forum activities: panel discussion,
+%poster session, and best poster award were a succes. (In particular,
+%several students obtained internships, organized SDM workshops in
+%2013, and improved their papers as a result of the Forum). 
+\meila~ is a recipient of the grant ``Statistical Modeling the
+Functional Activity in the Primary Motor Cortex'' from the {\em NSF
+  ERC for Sensorymotor and Neural Engineering}, is a two year ongoing
 project. It has involved so far 2 statistics graduate students and one
 undergraduate.
 
@@ -95,21 +124,13 @@ functions scale to size of current surveys \cite{Moore00}. This
 software was made publicly available and has been used to compute the
 2--point function on over 10$^6$ galaxies and the 3--point correlation
 function of 400,000 galaxies from the SDSS survey
-\cite{Scranton2002,Szapudi2002,Nichol2006,mcbride2011a,mcbride2011b}. This
-work has resulted the introduction of signal compression and analysis
-techniques to astronomy that are now regularly applied to the analysis
-of spectroscopic surveys. His papers have demonstrated the ability of
-computer algorithms to automatically classify astronomical objects
-\cite{vdp2009,daniel2011} as well as using simplified active learning
-methods to accelerate the exploration of complex parameter spaces
-\cite{daniel2012}.
+\cite{Scranton2002,Szapudi2002,Nichol2006,mcbride2011a,mcbride2011b}. 
 
 The Co-PI Ivezi\'{c} is the Project Scientist for the LSST. He was
-recently PI on three projects supported by NSF that are indirectly
+recently PI on two projects supported by NSF that are indirectly
 related to the work proposed here (mostly through data mining aspects,
 public release practice for all data products, and through engaging
 large numbers of students in research and publication process).
-
 The projects ``Towards a Panoramic 7-D Map of the Milky Way''
 (AST-070790) and ``Mapping the Milky Way: Data-miners, Modelers,
 Observers, Unite!'' (AST-1008784) quantified statistical behavior of a
@@ -120,15 +141,13 @@ papers, and the work engaged four graduate students (including two
 Ph.D. theses) and 11 undergraduate students.  A team of three
 undergraduate students has developed an education and public outreach
 site.
-
-The key project aims for the NSF award AST-0507529 ``Interpretation of
-Modern Radio Surveys: Test of the Unification Paradigm'' were
-unification of several modern radio catalogs into a single public
-database containing several million sources and morphological
-classification of the matched sources. This three-year long project
-has produced six journal publications, two Ph.D. theses, and has
-engaged six undergraduate students in data analysis and publications.
-
+%The key project aims for the NSF award AST-0507529 ``Interpretation of
+%Modern Radio Surveys: Test of the Unification Paradigm'' were
+%unification of several modern radio catalogs into a single public
+%database containing several million sources and morphological
+%classification of the matched sources. This three-year long project
+%has produced six journal publications, two Ph.D. theses, and has
+%engaged six undergraduate students in data analysis and publications.
 The project ``Statistical Description and Modeling of the Variability
 of Optical Continuum Emission from Quasars'' (AST-0807500) used
 time-domain data for the exploration of quasar physics. This
@@ -177,9 +196,6 @@ http://earth.google.com) which enabled the seamless exploration of
 astronomical images of the sky, and recently with Vanderplas worked to
 develop and deploy an affordable digital planetarium system using Microsoft's
 World Wide Telescope software \cite{rosenfield2011}.
-
-All tools, codes and educational material developed through this
-program will be open-source and made available on the web. 
 
 \comment{
 \section{Cemetery}
