--- a/planJake.tex
+++ b/planJake.tex
@@ -1,4 +1,4 @@
-\subsection{Leveraging Current NSF Funding}
+\section{Leveraging Current NSF Funding}
 \label{sec:Jake}
 
 Co-PI Vanderplas is currently supported by a 3-year NSF postdoctoral
