--- a/proposal.tex
+++ b/proposal.tex
@@ -40,7 +40,7 @@
 
 %\usepackage{etoolbox}
 
-%\renewcommand{\baselinestretch}{0.971}
+\renewcommand{\baselinestretch}{0.985}
 
 \usepackage{hyperref}
 
@@ -159,11 +159,11 @@ recruitment.tex: \section{Recruitment, Mentoring, and Retention}
  recruitment.tex:\subsection{Recruiting Under-represented Groups}
  recruitment.tex:\subsection{Mentoring, Networking, and Retaining Students}
 
-uw.tex:\subsection{The UW E-science program}
+uw.tex:\section{The UW E-science program}
 uw.tex:\subsection{The University of Washington eScience Institute}
 uw.tex:\subsection{Graduate education: the ``Big-Data'' IGERT}
 
-planJake.tex:\subsection{Leveraging Current NSF Funding}
+planJake.tex:\section{Leveraging Current NSF Funding}
 
 organization.tex:\section{    {\bf        PROJECT ORGANIZATION         }}
  organization.tex:\subsection{                      Key Project Aims                   }
