--- a/recruitment.tex
+++ b/recruitment.tex
@@ -2,10 +2,10 @@
 
  The University of Washington has long played a leadership role in
  recruiting, and mentoring students including those from traditionally
- under-represented groups (including women, people with disabilities
+ under-represented groups (i.e.\ women, people with disabilities
  and under-represented minorities). To ensure a diverse range of
  applicants to the ACMS program we will actively recruit students from
- under-represented groups (targeting incoming undergraduate students
+ these groups (targeting incoming undergraduate students
  who have expressed an interest in statistics or math).  We will
  leverage the IGERT and Pre-MAP programs described below; with the
  graduate students in the IGERT program acting as mentors and role
@@ -28,10 +28,7 @@ that they will need.  This role involves implementing pipeline
 partnership programs with undergraduate departments, programs, and
 faculty at local, state, and regional community and state colleges for
 the purpose of identifying potential students (e.g.\ $\sim$30\% of UW
-students come from two-year community colleges). Additionally, to
-establish in-person recruitment connections, on a regular basis, the
-IGERT graduate students will present at these institutions as a
-recruitment opportunity.
+students come from two-year community colleges). 
 
 
 Examples of ongoing initiatives upon which we will build include an
@@ -40,20 +37,9 @@ Equity in Engineering Relationships; PEERS). PEERS Leaders give
 presentations to student groups about the impact of bias. Through the
 seminar series, each year, we will request a visit from PEERS Leaders
 so that all prospective faculty and mentors can learn how bias can
-affect student success.  The University of Washington is very active
-in the area of promoting and increasing the participation of {\bf
-  students with disabilities}. For example, in the computing fields we
-will develop a partnership with the AccessComputing Alliance
-%(\url{http://www.washington.edu/accesscomputing/}) 
-and the University
-of Washington DO-IT program
-%(\url{http://www.washington.edu/doit/}). 
-The AccessComputing Team will provide mentoring and other activities
-that support students with disabilities in their educational goals.
-
-To recruit and retain {\bf women} into this program, we will leverage
+affect student success. To recruit and retain {\bf women} into this program, we will leverage
 several existing organizations and efforts.  Our key partner will be
-the University of Washington Advance Program~\cite{x}.  ADVANCE is
+the University of Washington Advance Program.  ADVANCE is
 working on creating a diverse, thriving campus in which all faculty in
 science, engineering and mathematics (SEM) receive the proper support,
 flexibility and recognition to achieve her or his maximum
@@ -88,9 +74,9 @@ One important way to keep track of the progress of students and to
 build community is to have seminars where current students give
 presentations on their research on a rotating schedule. Students have
 the opportunity to learn important professional communication skills,
-in a nurturing environment, including explaining their science to
-individuals outside of their domain.  They will be able to receive
-feedback on their ideas. In addition, the faculty, through periodic
+including explaining their science to individuals outside of their
+domain.  They will be able to receive feedback on their ideas in a
+nurturing environment. In addition, the faculty, through periodic
 faculty wide meetings, will monitor each student’s progress.  During
 these reviews, the mentoring relationships of the student will be
 examined so that the faculty and peer mentor roles are active and
