--- a/research.tex
+++ b/research.tex
@@ -8,9 +8,9 @@ scientific data. The students targeted will be Statistics and ACMS
 Statistics track undergraduates, as well as Statistics and Astronomy
 graduate students. 
 
-We will specifically foster working in teams including graduate and
+We will specifically foster working in teams of graduate and
 undergraduate students. The students will be mentored by the four
-PI's. They will be working on real research projects, some of which
+PI's. They will work on real research projects, some of which
 are listed below. 
 \bits
 \item {\em Non-linear dimension reduction in large scientific data} is a long-time research interest of \meila, with methodological results in \cite{PerraultM:asymptotic-nips11,Perrault-JoncasM:riemann-jmlr11}. Currently, these methods have been used largely for data visualisation in Astronomy as well as in other scientific fields; however, we believe they could be useful beyond visualisation, in discovering low dimensional meaningful parametrizations of high-dimensional data. The students will work on implementing scalable Python versions of the algorithms, suitable for large data sets, and, co-advised by the PI's will apply them to the study of scientific data.
