--- a/introduction.tex
+++ b/introduction.tex
@@ -1,44 +1,41 @@
 \section{ INTRODUCTION}
 
-This three-year project is an enthusiastic response to the EXTREEMS-QED (Expeditions in Training, Research, 
-and Education for Mathematics and Statistics Through Quantitative Explorations of Data) solicitation for proposals
-that aim to train the next generation of statistics and mathematics undergraduate students for confronting new
-challenges in computational and data-enabled science and engineering (\cdse).  The proposed work addresses and 
-includes all the main required project components: Education and Training, Research, and Faculty Professional 
-Development. The proposed program will provide opportunities for undergraduate research and hands-on experiences 
-centered on \cdse\ and will result in significant changes to the undergraduate mathematics and statistics curriculum 
-at the University of Washington. We have secured broad institutional support and buy-in from two major departments 
-(Statistics and Astronomy), and the proposed work includes a workshop centered on professional development activities
-for faculty from other institutions wishing to emulate the proposed program. 
+Most disciplines, from the physical to the life sciences, have entered
+an era, where discovery is no longer limited by the collection and
+processing of data, but by the management and the statistical analysis
+of this information. Developments in instrumentation have led to a
+tremendous increase in the magnitude of available data (resulting in a
+focus on \emph{Big Data}).  While significant steps in the development
+of the statistical methodologies for processing Big Data have been
+made, these ``hammers'' are rarely tied to fundamental questions that
+science and society wish to address. There remains a disconnect
+between methodological approaches to Big Data and the science that
+they can enable.
 
-\vskip 0.1in Our main goals and deliverables are: 
-\bits
-\item {\bf Education and Training} (Section \ref{sec:education}).
+This three-year project is designed to 
+%use the 
+%EXTREEMS-QED
+%(Expeditions in Training, Research, and Education for Mathematics and
+%Statistics Through Quantitative Explorations of Data) program to
+address these challenges by training a new generation of statistics
+and mathematics undergraduate students to confront the challenges in
+computational and data-enabled science and engineering (\cdse).  The
+proposed work addresses and includes all the main required project
+components required for EXTREEMS-QED: Education and Training,
+Research, and Faculty Professional Development. Our program will
+provide opportunities for undergraduate research and hands-on
+experiences centered on \cdse\ and will result in significant changes
+to the undergraduate mathematics and statistics curriculum at the
+University of Washington. We have secured broad institutional support
+and buy-in from two major departments (Statistics and Astronomy) to
+initiate this program with the expectation that, over the three years
+of this project, it will grow to encompass Mathematics and a broader
+range of science domains. The decimation of new curricula, software,
+research and teaching materials together with a workshop centered on
+professional development activities for faculty will enable this
+program to growth both internally to the University and to external
+partners.
 
-Transform the ACMS (Applied and Computational Math Sciences) Program Statistics track
-\begin{itemize}
-  \item two new courses
-  \item new curriculum 
-  \item undergraduate \cdse~ Research Seminar
-  \end{itemize}
-\item {\bf Research and mentoring for research} (Section \ref{sec:research})
-\begin{itemize}
-  \item facilitate entrance of Statistics students into computationally intensive data analysis research
-  \item mentoring of undergraduate students by PI, Co-PIs, and graduate students
-  \item mentoring of Statistics and Astronomy graduate students by PI and Co-PIs
-  \end{itemize}
-\item {\bf Dissemination and Outreach} (Section \ref{sec:outreach})
 
- \bits
-  \item software and datasets infrastructure for teaching computational statistics and machine learning 
-  \item workshop for UW faculty % in the use of the infrastructure and our experience with it
-  \item workshop with outside participation. 
- \eits
-\eits  
-
-In the remainder of this proposal, we describe each component in
-detail, how they fit within the ACMS program and the overall ``Big
-Data'' efforts within the University of Washington, and the budget and
-execution schedule for the proposed program.
 
 
